deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service
  namespace: ml-demo
  labels:
    app: model-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      containers:
      - name: model-service
        image: model-service:1
        ports:
        - containerPort: 8080
